-----------------------
PVFS2 Release ChangeLog
-----------------------


pvfs2-0.5.1pre1
===============
- add a pidfile option to pvfs2-server for integration with init scripts
- auto-tune BMI timeout to poll during activity, sleep a bit otherwise
- pay attention to BMI timeouts in IB layer
- fail quitely on unrecognized BMI method types in pvfs2tab
- disable TCP method for IB builds


pvfs2-0.5.0
===========
- consolidate msgpair and msgpairarray implementations
- bug fixed in "make kmod" path handling
- added ability to build kernel module and test programs to pvfs2-build.sh
- added scripts (from Justin Luck) for nightly vfs testing
- started nightly vfs testing (see pvfs2-testing mailing list)
- implemented job cancel api
- added job timeouts, and started using in both client & server
- added ability to (manually) reconnect after transient failure in bmi_tcp
- allow queueing of receives for failed bmi_tcp addresses that may get
  reconnected
- removed some depricated client library code 
- started using PVFS_ECANCEL rather than PVFS_EINTR for cancelled operations
- added bmi address reference counting
- allow server to discard anonymous bmi addresses after connection has been
  closed (to conserve resources)
- removed test subdirectory from distributed releases
- cleanup of protocol version mismatch error messages, including a way to
  propigate errors detected on server back to client
- fixed db cursor leak in trove
- fixed for busy spin condition in client library when retrying operations
- various cleanups to error handling in msgpairarray code
- added some shell script testing and bonnie++ testing to automated tests
- fixed pvfs2-ls handling of large usernames, reported by Philipp Sadleder
- fixed kernel bug that allowed you to remove the module while in use
- kernel bufmap general I/O path improvements
- increase the default size of the server-side attribute cache
  (configurable in pvfs2-genconfig)